--- a/Assignment 3/index.html
+++ b/Assignment 3/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Assignment 3</title>
 </head>
 
 <body>
@@ -14,6 +14,7 @@
             <p>Name: Afia Khan
                 <br>
                 Roll # 1779
+                Assignment Github Repo: <a href="https://github.com/afiaakhan" >Assignment 3 Repository</a>
             </p>
         </h4>
         <h3> <a href="list1.html">LIST 1</a> </h3>
