--- a/Assignment 3/index.html
+++ b/Assignment 3/index.html
@@ -13,8 +13,8 @@
         <h4>
             <p>Name: Afia Khan
                 <br>
-                Roll # 1779
-                Assignment Github Repo: <a href="https://github.com/afiaakhan" >Assignment 3 Repository</a>
+                Roll # 1779 <br>
+                Assignment Github Repo: <a href="https://github.com/afiaakhan/Web-Development-Course/tree/main/Assignment%203" >Assignment 3 Repository</a>
             </p>
         </h4>
         <h3> <a href="list1.html">LIST 1</a> </h3>
