--- a/Assignment 4/index.html
+++ b/Assignment 4/index.html
@@ -14,7 +14,7 @@
                 <br>
                 Roll # 1779 
                 <br>
-                Assignment Github Repo: <a href="https://github.com/afiaakhan/Web-Development-Course/tree/main/Assignment%204" >Assignment 4 Github Repository</a>
+                Assignment Github Repo: <a href="https://github.com/afiaakhan/Web-Development-Course/tree/main/Assignment%204" target="_blank" >Assignment 4 Github Repository</a>
             </p>
         </h4>
         <h3> <a href="page1.html">Page 1</a> </h3>
