--- a/Assignment 5/index.html
+++ b/Assignment 5/index.html
@@ -31,7 +31,7 @@
                 <br>
                 Roll # 1779 
                 <br>
-                Assignment Github Repo: <a href="https://github.com/afiaakhan/Web-Development-Course/tree/main/Assignment%203" >Assignment 5 Github Repository</a>
+                Assignment Github Repo: <a href="https://github.com/afiaakhan/Web-Development-Course/tree/main/Assignment%205"  target="_blank" >Assignment 5 Github Repository</a>
             </p>
         </h4>
     <br>
